# skills-integrate-mcp-with-copilot

./: .gitignore  README.md  TEST_COMPLETION_SUMMARY.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
.github/: agentic-chain.example.yml
.github/ISSUE_TEMPLATE/: strategic-pivot.md
.github/workflows/: agentic-chain.yml  competitive-dashboard.yml  tests.yml
agentic_chain/: README.md  __init__.py  cli.py  orchestrator.py  parallel.py
agentic_chain/agents/: __init__.py  code_reviewer.py  issue_analyzer.py  project_analyzer.py  similar_issue_detector.py  solution_implementer.py
agentic_chain/api/: __init__.py  app.py  auth.py  jobs.py  logging_middleware.py  models.py  rate_limit.py  webhooks.py
agentic_chain/github_integration/: __init__.py  comment_formatter.py  config.py  issue_processor.py  webhook_handler.py
agentic_chain/interactive/: __init__.py  handler.py  types.py
agentic_chain/llm/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  cache.py  config.py  factory.py  ollama_provider.py  openai_provider.py  prompts.py
agentic_chain/memory/: __init__.py  embeddings.py  manager.py  storage.py  types.py
agentic_chain/observability/: __init__.py  context.py  dashboard.py  exporters.py  logging.py  metrics.py  tracer.py
agentic_chain/plugins/: PLUGIN_GUIDE.md  __init__.py  loader.py  registry.py
agentic_chain/plugins/examples/: __init__.py  documentation_checker.py  performance_analyzer.py  security_auditor.py
docs/: competitive-analysis.md
src/: app.py
src/static/: dashboard.html
tests/: README.md  __init__.py  conftest.py  test_api.py  test_benchmarks.py  test_cli.py  test_code_reviewer.py  test_github_integration.py  test_interactive.py  test_issue_analyzer.py  test_llm.py  test_llm_agents.py  test_llm_base.py  test_llm_cache.py  test_llm_config.py  test_llm_openai.py  test_llm_prompts.py  test_llm_providers.py  test_memory.py  test_observability.py  test_orchestrator.py  test_parallel.py  test_plugins.py  test_project_analyzer.py  test_similar_issue_detector.py  test_solution_implementer.py
